# InvariantFlow

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PHASE_V2.md  README.md  docker-compose.yml  e2e_test.sh  pyproject.toml
app/: config.py  main.py
app/agents/: graph.py  lifecycle.py
app/agents/ingestion/: __init__.py  extractor.py  normalizer.py  pipeline.py  rule_validator.py
app/api/: ingestion.py  protocols.py  routes.py  rules.py  sse.py  tasks.py
app/eval/: condition_parser.py  resolver.py
app/llm/: __init__.py  client.py  cost.py  models.py  structured_output.py
app/memory/: blackboard.py  exec_log.py  factory.py  mem0_store.py  postgres_exec_log.py  postgres_rule_store.py  redis_blackboard.py  redis_events.py  redis_state_store.py  rule_store.py  seeds.py  state_store.py  v2_stores.py
app/mock_api/: models.py  router.py  store.py
app/runtime/: __init__.py  agent_registry.py  events.py  run_registry.py
app/schemas/: execution.py  feedback.py  rules.py  scenarios.py  validation.py
db/: init.sql
docs/: DOCKERFILE_UV_REFERENCE.md
frontend/: package-lock.json  package.json
frontend/src/: app.css
tests/: conftest.py  test_api_testing_routes.py  test_blackboard_runner.py  test_condition_parser.py  test_cost_tracker.py  test_critic_llm.py  test_flow_planner.py  test_ingestion_pipeline.py  test_langgraph_runner.py  test_llm_structured_output.py  test_mock_api.py  test_pipeline.py  test_protocol_endpoints.py  test_resolver.py  test_rule_runner.py  test_rules_api.py  test_scenario_generator.py  test_scenario_generator_llm.py
(+30 files in other folders)
